[gd_scene load_steps=9 format=3 uid="uid://vvre4m45tlxu"]

[ext_resource type="StyleBox" uid="uid://dmnjoq44worp4" path="res://res/bg.tres" id="1_v4rqv"]
[ext_resource type="Script" path="res://script/main.gd" id="1_vnh5n"]
[ext_resource type="Theme" uid="uid://nsm5x83r1xkx" path="res://res/font/title_button.tres" id="2_xfxyv"]
[ext_resource type="FontFile" uid="uid://0yvhxlgwsulx" path="res://res/font/Uranus_Pixel/Uranus_Pixel_11Px.ttf" id="3_s5anl"]
[ext_resource type="Texture2D" uid="uid://bye5xinkorjg5" path="res://res/pic/gui_icon/icons8-exit-48.png" id="5_bkfb6"]
[ext_resource type="Texture2D" uid="uid://cepsrarnifxwi" path="res://res/pic/gui_icon/icons8-fullscreen-48.png" id="6_ceopt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rjoac"]
bg_color = Color(0, 0, 0, 0.784314)

[sub_resource type="LabelSettings" id="LabelSettings_nb4mc"]
font = ExtResource("3_s5anl")
font_size = 50

[node name="Main" type="Control"]
modulate = Color(0, 0, 0, 1)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vnh5n")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(300, 300)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_v4rqv")

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2

[node name="GridContainer2" type="GridContainer" parent="PanelContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 50
columns = 2

[node name="PlayButton" type="Button" parent="PanelContainer/CenterContainer/GridContainer2"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme = ExtResource("2_xfxyv")
theme_override_fonts/font = ExtResource("3_s5anl")
theme_override_font_sizes/font_size = 72
text = "放映"

[node name="EditButton" type="Button" parent="PanelContainer/CenterContainer/GridContainer2"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme = ExtResource("2_xfxyv")
theme_override_fonts/font = ExtResource("3_s5anl")
theme_override_font_sizes/font_size = 72
text = "编辑"

[node name="ScriptSelelcter" type="CenterContainer" parent="PanelContainer"]
visible = false
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/ScriptSelelcter"]
custom_minimum_size = Vector2(1000, 800)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rjoac")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ScriptSelelcter/PanelContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/ScriptSelelcter/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 40

[node name="Label" type="Label" parent="PanelContainer/ScriptSelelcter/PanelContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
text = "剧 本"
label_settings = SubResource("LabelSettings_nb4mc")
horizontal_alignment = 2

[node name="AddScriptBtn" type="Button" parent="PanelContainer/ScriptSelelcter/PanelContainer/VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_font_sizes/font_size = 20
text = "添  加"

[node name="Space" type="PanelContainer" parent="PanelContainer/ScriptSelelcter/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/ScriptSelelcter/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/ScriptSelelcter/PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="ScriptItemBox" type="VBoxContainer" parent="PanelContainer/ScriptSelelcter/PanelContainer/VBoxContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AddScript" type="CenterContainer" parent="PanelContainer"]
visible = false
layout_mode = 2

[node name="AddScript" type="PanelContainer" parent="PanelContainer/AddScript"]
custom_minimum_size = Vector2(800, 60)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/AddScript/AddScript"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/AddScript/AddScript/MarginContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="PanelContainer/AddScript/AddScript/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
placeholder_text = "文件名"
max_length = 15

[node name="AddButton" type="Button" parent="PanelContainer/AddScript/AddScript/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "提 交"

[node name="PlaySelelcter" type="CenterContainer" parent="PanelContainer"]
visible = false
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/PlaySelelcter"]
custom_minimum_size = Vector2(1000, 800)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rjoac")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/PlaySelelcter/PanelContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/PlaySelelcter/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 40

[node name="Label" type="Label" parent="PanelContainer/PlaySelelcter/PanelContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
text = "剧 本"
label_settings = SubResource("LabelSettings_nb4mc")
horizontal_alignment = 2

[node name="Space" type="PanelContainer" parent="PanelContainer/PlaySelelcter/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/PlaySelelcter/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/PlaySelelcter/PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="ScriptItemBox" type="VBoxContainer" parent="PanelContainer/PlaySelelcter/PanelContainer/VBoxContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 60.0
offset_bottom = 60.0

[node name="ExitBtn" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_bkfb6")
stretch_mode = 3

[node name="ScreenBtn" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("6_ceopt")
stretch_mode = 3

[connection signal="gui_input" from="PanelContainer/ScriptSelelcter" to="." method="close_script_selelcter_visibility"]
[connection signal="pressed" from="PanelContainer/ScriptSelelcter/PanelContainer/VBoxContainer/MarginContainer2/AddScriptBtn" to="." method="switch_to_name_new_script"]
[connection signal="gui_input" from="PanelContainer/AddScript" to="." method="close_add_script_visibility"]
[connection signal="pressed" from="PanelContainer/AddScript/AddScript/MarginContainer/HBoxContainer/AddButton" to="." method="create_new_script"]
[connection signal="gui_input" from="PanelContainer/PlaySelelcter" to="." method="close_play_selelcter_visibility"]
[connection signal="pressed" from="HBoxContainer/ExitBtn" to="." method="shutdown_program"]
[connection signal="toggled" from="HBoxContainer/ScreenBtn" to="." method="toggle_fullscreen"]
